--- a/src/app/modules/payments/components/ticket-payments/ticket-payments.component.html
+++ b/src/app/modules/payments/components/ticket-payments/ticket-payments.component.html
@@ -1,43 +1,94 @@
+   <!--begin::List Widget 10-->
+<div class="card card-custom">
+   <!--begin::Header-->
+   <div class="modal-header">
+    <h4 class="modal-title">Ticket</h4>
+    <button type="button" class="close" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <!--end::Header-->
+ 
+  <div class="modal-header">
+
+    <div class="col-lg-6">
+      <label>Search for Date</label>
+      <div class="input-group input-group-solid">
+        <input
+          type="text"
+          name="dob"
+          class="form-control form-control-lg form-control-solid"
+          autocomplete="off"
+          placeholder="dd/mm/yyyy"
+          ngbDatepicker
+          #d="ngbDatepicker"
+          [class.is-invalid]="isControlInvalid('dob')"
+          [class.is-valid]="isControlValid('dob')"
+          formControlName="dob"
+          readonly="true"
+        />
+        <div class="input-group-append" (click)="d.toggle()">
+          <span class="input-group-text">
+            <i class="text-dark-50 flaticon-calendar"></i>
+          </span>
+        </div>
+      </div>
+      <div class="valid-feedback" *ngIf="isControlValid('dob')">
+        Date of Birth was entered correct
+      </div>
+      <div
+        class="invalid-feedback"
+        *ngIf="controlHasError('required', 'dob')"
+      >
+        Please enter <b>Date of Birth</b> in 'mm/dd/yyyy' format
+      </div>
+    </div>
+
+
+    <div class="col-lg-6" [formGroup]="searchGroup">
+      <label>Search for Code</label>
+      <input type="text" class="form-control" name="searchText" placeholder="Search" value=""
+        formControlName="searchTerm" />
+    </div>
+
+  </div>
+
+
+
  <!--begin::Body-->
  <div class="card-body pt-0">
+   
     <!--begin::Item-->
     <div class="mb-6">
       <!--begin::Content-->
       <div class="d-flex align-items-center flex-grow-1">
+        
         <!--begin::Checkbox-->
         <label class="checkbox checkbox-lg checkbox-lg flex-shrink-0 mr-4">
-          <input type="checkbox" value="1" />
+          <input type="checkbox" value="40" />
           <span></span>
         </label>
         <!--end::Checkbox-->
 
         <!--begin::Section-->
-        <div
-          class="d-flex flex-wrap align-items-center justify-content-between w-100"
-        >
+        <div class="d-flex flex-wrap align-items-center justify-content-between w-100">
           <!--begin::Info-->
           <div class="d-flex flex-column align-items-cente py-2 w-75">
             <!--begin::Title-->
-            <a
-              href="#"
-              class="text-dark-75 font-weight-bold text-hover-primary font-size-lg mb-1"
-            >
-              Daily Standup Meeting niel huamaman cerva
+            <a href="#" class="text-dark-75 font-weight-bold text-hover-primary font-size-lg mb-1">
+              Codigo de factura: F001-123456
             </a>
             <!--end::Title-->
 
             <!--begin::Data-->
-            <span class="text-muted font-weight-bold"> Due in 2 Days </span>
+            <span class="text-muted font-weight-bold"> Periodo: 08/2021 </span>
+            <span class="text-muted font-weight-bold"> Fecha de vencimiento: 3/09/2021 </span>
+            <span class="text-muted font-weight-bold"> Monto total: S/ 100.00 </span>
+            <span class="text-muted font-weight-bold"> Monto Pagado: S/ 60.00 </span>
+            <span class="text-muted font-weight-bold"> Monto a pagar: S/ 40.00 </span>
             <!--end::Data-->
           </div>
           <!--end::Info-->
-
-          <!--begin::Label-->
-          <span
-            class="label label-lg label-light-primary label-inline font-weight-bold py-4"
-            >Approved</span
-          >
-          <!--end::Label-->
         </div>
         <!--end::Section-->
       </div>
@@ -51,38 +102,66 @@
       <div class="d-flex align-items-center flex-grow-1">
         <!--begin::Checkbox-->
         <label class="checkbox checkbox-lg checkbox-lg flex-shrink-0 mr-4">
-          <input type="checkbox" value="1" />
+          <input type="checkbox" value="40" />
           <span></span>
         </label>
         <!--end::Checkbox-->
 
         <!--begin::Section-->
-        <div
-          class="d-flex flex-wrap align-items-center justify-content-between w-100"
-        >
+        <div class="d-flex flex-wrap align-items-center justify-content-between w-100">
           <!--begin::Info-->
           <div class="d-flex flex-column align-items-cente py-2 w-75">
             <!--begin::Title-->
-            <a
-              href="#"
-              class="text-dark-75 font-weight-bold text-hover-primary font-size-lg mb-1"
-            >
-              Group Town Hall Meet-up with showcase
+            <a href="#" class="text-dark-75 font-weight-bold text-hover-primary font-size-lg mb-1">
+              Codigo de factura: F001-123456
             </a>
             <!--end::Title-->
 
             <!--begin::Data-->
-            <span class="text-muted font-weight-bold"> Due in 2 Days </span>
+            <span class="text-muted font-weight-bold"> Periodo: 08/2021 </span>
+            <span class="text-muted font-weight-bold"> Fecha de vencimiento: 3/09/2021 </span>
+            <span class="text-muted font-weight-bold"> Monto total: S/ 100.00 </span>
+            <span class="text-muted font-weight-bold"> Monto Pagado: S/ 60.00 </span>
+            <span class="text-muted font-weight-bold"> Monto a pagar: S/ 40.00 </span>
             <!--end::Data-->
           </div>
           <!--end::Info-->
+        </div>
+        <!--end::Section-->
+      </div>
+      <!--end::Content-->
+    </div>
+    <!--end::Item-->
+    <!--begin::Item-->
+    <div class="mb-6">
+      <!--begin::Content-->
+      <div class="d-flex align-items-center flex-grow-1">
+        <!--begin::Checkbox-->
+        <label class="checkbox checkbox-lg checkbox-lg flex-shrink-0 mr-4">
+          <input type="checkbox" value="40" />
+          <span></span>
+        </label>
+        <!--end::Checkbox-->
 
-          <!--begin::Label-->
-          <span
-            class="label label-lg label-light-warning label-inline font-weight-bold py-4"
-            >In Progress</span
-          >
-          <!--end::Label-->
+        <!--begin::Section-->
+        <div class="d-flex flex-wrap align-items-center justify-content-between w-100">
+          <!--begin::Info-->
+          <div class="d-flex flex-column align-items-cente py-2 w-75">
+            <!--begin::Title-->
+            <a href="#" class="text-dark-75 font-weight-bold text-hover-primary font-size-lg mb-1">
+              Codigo de factura: F001-123456
+            </a>
+            <!--end::Title-->
+
+            <!--begin::Data-->
+            <span class="text-muted font-weight-bold"> Periodo: 08/2021 </span>
+            <span class="text-muted font-weight-bold"> Fecha de vencimiento: 3/09/2021 </span>
+            <span class="text-muted font-weight-bold"> Monto total: S/ 100.00 </span>
+            <span class="text-muted font-weight-bold"> Monto Pagado: S/ 60.00 </span>
+            <span class="text-muted font-weight-bold"> Monto a pagar: S/ 40.00 </span>
+            <!--end::Data-->
+          </div>
+          <!--end::Info-->
         </div>
         <!--end::Section-->
       </div>
@@ -96,133 +175,39 @@
       <div class="d-flex align-items-center flex-grow-1">
         <!--begin::Checkbox-->
         <label class="checkbox checkbox-lg checkbox-lg flex-shrink-0 mr-4">
-          <input type="checkbox" value="1" />
+          <input type="checkbox" value="40" />
           <span></span>
         </label>
         <!--end::Checkbox-->
 
         <!--begin::Section-->
-        <div
-          class="d-flex flex-wrap align-items-center justify-content-between w-100"
-        >
+        <div class="d-flex flex-wrap align-items-center justify-content-between w-100">
           <!--begin::Info-->
           <div class="d-flex flex-column align-items-cente py-2 w-75">
             <!--begin::Title-->
-            <a
-              href="#"
-              class="text-dark-75 font-weight-bold text-hover-primary font-size-lg mb-1"
-            >
-              Next sprint planning and estimations
+            <a href="#" class="text-dark-75 font-weight-bold text-hover-primary font-size-lg mb-1">
+              Codigo de factura: F001-123456
             </a>
             <!--end::Title-->
 
             <!--begin::Data-->
-            <span class="text-muted font-weight-bold"> Due in 2 Days </span>
+            <span class="text-muted font-weight-bold"> Periodo: 08/2021 </span>
+            <span class="text-muted font-weight-bold"> Fecha de vencimiento: 3/09/2021 </span>
+            <span class="text-muted font-weight-bold"> Monto total: S/ 100.00 </span>
+            <span class="text-muted font-weight-bold"> Monto Pagado: S/ 60.00 </span>
+            <span class="text-muted font-weight-bold"> Monto a pagar: S/ 40.00 </span>
             <!--end::Data-->
           </div>
           <!--end::Info-->
-
-          <!--begin::Label-->
-          <span
-            class="label label-lg label-light-success label-inline font-weight-bold py-4"
-            >Success</span
-          >
-          <!--end::Label-->
         </div>
         <!--end::Section-->
       </div>
       <!--end::Content-->
     </div>
     <!--end::Item-->
-
-    <!--begin::Item-->
-    <div class="mb-6">
-      <!--begin::Content-->
-      <div class="d-flex align-items-center flex-grow-1">
-        <!--begin::Checkbox-->
-        <label class="checkbox checkbox-lg checkbox-lg flex-shrink-0 mr-4">
-          <input type="checkbox" value="1" />
-          <span></span>
-        </label>
-        <!--end::Checkbox-->
-
-        <!--begin::Section-->
-        <div
-          class="d-flex flex-wrap align-items-center justify-content-between w-100"
-        >
-          <!--begin::Info-->
-          <div class="d-flex flex-column align-items-cente py-2 w-75">
-            <!--begin::Title-->
-            <a
-              href="#"
-              class="text-dark-75 font-weight-bold text-hover-primary font-size-lg mb-1"
-            >
-              Sprint delivery and project deployment
-            </a>
-            <!--end::Title-->
-
-            <!--begin::Data-->
-            <span class="text-muted font-weight-bold"> Due in 2 Days </span>
-            <!--end::Data-->
-          </div>
-          <!--end::Info-->
-
-          <!--begin::Label-->
-          <span
-            class="label label-lg label-light-danger label-inline font-weight-bold py-4"
-            >Rejected</span
-          >
-          <!--end::Label-->
-        </div>
-        <!--end::Section-->
-      </div>
-      <!--end::Content-->
-    </div>
-    <!--end: Item-->
-
-    <!--begin: Item-->
-    <div class="">
-      <!--begin::Content-->
-      <div class="d-flex align-items-center flex-grow-1">
-        <!--begin::Checkbox-->
-        <label class="checkbox checkbox-lg checkbox-lg flex-shrink-0 mr-4">
-          <input type="checkbox" value="1" />
-          <span></span>
-        </label>
-        <!--end::Checkbox-->
-
-        <!--begin::Section-->
-        <div
-          class="d-flex flex-wrap align-items-center justify-content-between w-100"
-        >
-          <!--begin::Info-->
-          <div class="d-flex flex-column align-items-cente py-2 w-75">
-            <!--begin::Title-->
-            <a
-              href="#"
-              class="text-dark-75 font-weight-bold text-hover-primary font-size-lg mb-1"
-            >
-              Data analytics research showcase
-            </a>
-            <!--end::Title-->
-
-            <!--begin::Data-->
-            <span class="text-muted font-weight-bold"> Due in 2 Days </span>
-            <!--end::Data-->
-          </div>
-          <!--end::Info-->
-
-          <!--begin::Label-->
-          <span
-            class="label label-lg label-light-warning label-inline font-weight-bold py-4"
-            >In Progress</span
-          >
-          <!--end::Label-->
-        </div>
-        <!--end::Section-->
-      </div>
-      <!--end::Content-->
-    </div>
-    <!--end: Item-->
+  
   </div>
   <!--end: Card Body-->
+</div>
+<!--end: Card-->
+<!--end: List Widget 10-->
