--- a/src/app/modules/users/components/list-user/list-user.component.html
+++ b/src/app/modules/users/components/list-user/list-user.component.html
@@ -46,7 +46,7 @@
             <div class="form-group form-group-inline">
               <div class="form-label form-label-no-wrap">
                 <label class="font-bold font-danger"><span>Selected records count:
-                    <b>{{ grouping.getSelectedRowsCount() }</b></span></label>
+                    <b>grouping.getSelectedRowsCount()</b></span></label>
               </div>
               <div>
                 <button type="button" class="btn btn-danger font-weight-bolder font-size-sm mr-1"
