--- a/src/app/pages/_layout/components/aside/aside.component.html
+++ b/src/app/pages/_layout/components/aside/aside.component.html
@@ -1383,6 +1383,27 @@
       </li>
       <!-- end::1 Level -->
 
+         <!-- begin::1 Level -->
+         <li
+         class="menu-item"
+         aria-haspopup="true"
+         routerLinkActive="menu-item-active"
+       >
+         <a
+           class="menu-link"
+           routerLink="/payment-management"
+           routerLinkActive="active"
+         >
+           <span
+             [inlineSVG]="'./assets/media/svg/icons/Communication/Add-user.svg'"
+             cacheSVG="true"
+             class="svg-icon menu-icon"
+           ></span>
+           <span class="menu-text">Payment Management</span>
+         </a>
+       </li>
+       <!-- end::1 Level -->
+
        <!-- Main -->
       <!-- begin::section -->
       <li class="menu-section">
